Thu Aug 16 19:03:49 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch]:
   - Changed 'float' to 'double', to prevent loss of precision when
     long values are casted to floats and back to long again.
   - Rewrote some helper functions (string_to_path, path_to_string,
     hid_lookup_usage, hid_lookup_path).
   - The path_to_string function can no longer overflow the buffer
     (we were dangerously close to the 64 character limit already).
 * drivers/usbhid-ups.c:
   - Changed 'float' to 'double' (see above).
 * drivers/belkin-hid.c, drivers/mge-hid.c:
   - Changed 'float' to 'double' (see above).
   - HIDGetItemString is passed a (char *) buffer since r1055, not
     a (unsigned char *).
 * drivers/*-hid.c:
   - Usage lookup tables is now terminated with { NULL, 0 } instead
     of { "\0", 0x0 }.

Wed Aug 15 21:47:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/pwmib.h:
   - Battery runtime is in seconds, not minutes.
   - The update of the snmp-ups driver is based on input from
     Bernd Markgraf (forgot to mention that in previous update).

Wed Aug 15 20:21:49 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/snmp-ups.c, drivers/ietfmib.h, drivers/pwmib.h:
   - Use all "ups.status" lines, not just the first.
   - Add a lot or parameters for PowerWare and some for IETF.

Wed Aug 15 19:37:41 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/libhid.[ch]:
   - Flush report buffer after writing new values to the UPS. The
     data in the UPS may change because of this, so we want to be
     sure that all subsequent reads, return fresh data.
   - Use calloc() instead of malloc() where useful.
   - HIDGetItemString returns (char *) but receives a (unsigned
     char *) as parameter.
   - physical_to_logical() would always return an integer, since it
     casts the result of the value conversion to a long, before
     returning the result as float.

Wed Aug 15 19:11:40 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
